--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,9 @@
 version: "3"
 services:
-  webpack:
+  webpack-demo:
     build: .
     command: ["npm", "run", "dev"]
     ports:
       - "127.0.0.1:8080:8080"
     volumes:
-      - ./webpack:/usr/src/webpack-demo/src
+      - ./webpack-demo:/usr/src/webpack-demo/src
